[package]
name = "service-kit-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
config = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
mime_guess = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
rust-embed = { workspace = true }
service-manager = { workspace = true }
sqlx = { workspace = true }
tui-textarea = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
